sass/px-simple-area-chart.scss
/*
 * Copyright (c) 2014 GE Global Research. All rights reserved.
 *
 * The copyright to the computer software herein is the property of
 * GE Global Research. The software may be used and/or copied only
 * with the written permission of GE Global Research or in accordance
 * with the terms and conditions stipulated in the agreement/contract
 * under which the software has been supplied.
 */


// Settings
@import "px-defaults-design/_settings.defaults.scss";

// Tools

// Generic
@import "px-normalize-design/_generic.normalize.scss";
@import "px-box-sizing-design/_generic.box-sizing.scss";

// Base
@import "px-flexbox-design/_base.flexbox.scss";


.wrapper {
  width: 100%;
  height: 100%;
}


// Meta

// Objects

// Component

// Trumps

